--- a/package.json
+++ b/package.json
@@ -1,22 +1,18 @@
 {
   "name": "contact-forms-css-processor",
-  "version": "1.0.0",
-  "main": "index.js",
+  "version": "1.2.0",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "postcss src/tailwind.css -o dist/tailwind.min.css",
-    "watch": "postcss src/tailwind.css -o dist/tailwind.min.css --watch"
+    "build": "npx postcss src/tailwind.css -o dist/tailwind.min.css --minify",
+    "watch": "npx postcss src/tailwind.css -o dist/tailwind.min.css --watch"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24",
+    "postcss-cli": "^10.1.0",
+    "tailwindcss": "^4.1.0"
+  },
   "dependencies": {
-    "@tailwindcss/postcss": "^4.1.4",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.3",
-    "postcss-cli": "^11.0.1",
-    "tailwindcss": "^4.1.4"
+    "@tailwindcss/postcss": "^4.1.4"
   }
 }
